2014-05-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-intera.inc: Confirm pts file exists before redirecting
	stdin, stdout and stderr.
	* info/t/README: File added.

2014-05-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodemenu.c (get_visited_nodes): Don't reuse a local
	variable for an unrelated purpose.  Declared static.  Argument
	not set to anything other than null in calling code removed.  All
	callers updated.
	* (select_visited_node): Don't free objects too early and always
	free them before function exit.
	* info/window.c (message_buffer_to_node): Comment changed.

2014-05-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi (Invoking Info): Mention differences in groff
	terminal output.

2014-05-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (scan_reference_label): Simpler logic for
	setting start and end fields of reference.
	(skip_input): Don't touch output_bytes_difference if not rewriting
	node.

	* info/info-utils.c (scan_reference_target): [preprocess_nodes=On]
	Better condition for which line to output file specifier on.

	* info/pseudotty.c: Don't exit on a read error.

2014-05-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/dir.c (build_dir_node): Unused local variable deleted.
	* info/indices.c (info_next_index_match): Unused local variable
	deleted.
	* info/info-utils.c (info_parse_node): Return 0 if nothing passed.
	(scan_reference_label): Unused local variable deleted.
	(scan_node_contents): Unused local variable deleted.
	* info/info.c (get_initial_file, add_initial_nodes)
	(allfiles_create_node, main): Unused local variables deleted.
	(node_file_name): Deleted.
	* info/man.c (xrefs_of_manpage): Unused variables deleted.
	(locate_manpage_xref): Deleted.
	* info/nodemenu.c (select_visited_node): Unused local variable
	removed.
	* info/nodes.c (get_nodes_of_info_file, get_file_character_encoding)
	(set_tag_nodelen, info_node_of_tag):
	Ununsed local variables removed.